--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,7 +7,7 @@
       <li><a href="">Home</a></li>
       <li><a href="">Movies</a></li>
       <li><a href="">TV Shows</a></li>
-      <li><a href="">Genres"</a></li>
+      <li><a href="">Genrese"</a></li>
     </ul>
   </nav>
 </header>
